--- a/resources/css/components/_alerts.scss
+++ b/resources/css/components/_alerts.scss
@@ -6,17 +6,43 @@
 
 .alert {
     margin-top: 40px;
-    padding: 5px 15px;
+    width: 80%;
+    padding: 2rem;
+    padding-top: 2.5rem;
     margin-bottom: 20px;
     
-
+    position: relative;
     font-family: v.$secondaryFontFamily;
     font-size: 16px;
 
     &--message {
-        background-color: rgb(100, 100, 32);
+        background-color: rgb(146, 146, 89);
         color: v.$primaryTextColor;
         border-radius: 15px;
         border-top-left-radius: 15px;
+    }
+
+    &--success {
+        background-color: rgb(39, 160, 80);
+        color: v.$primaryTextColor;
+        border-radius: 15px;
+        border-top-left-radius: 15px;
+        
+    }
+
+    &__close {
+        box-sizing: content;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        background: none;
+        border: none;
+        cursor: pointer;
+
+        &__icon {
+           width: 30px;
+           height: 30px;
+           
+        }
     }
 }
