--- a/resources/css/components/_card.scss
+++ b/resources/css/components/_card.scss
@@ -41,7 +41,7 @@ card.scss
         height: auto;  
         overflow: hidden; 
         box-sizing: border-box;
-        padding: 1rem;
+        padding: 2rem 1rem;
         
     }
 
@@ -53,6 +53,12 @@ card.scss
         color: v.$primaryTextColor;
         text-align: center;
         display: block;
+        &--secondary {
+            font-size: 18px;
+            padding: 0;
+            margin: 0;
+            padding-top: 1rem;
+        }
         
     }
 
@@ -62,6 +68,23 @@ card.scss
         color: v.$mutedTextColor;
         text-align: center;
         display: block;
+        &--secondary {
+            font-size: 16px;
+            padding: 1rem 0;
+            margin: 0;
+        }
+    }
+
+    &__muted {
+       
+        position: absolute;
+        right: 1rem;
+       
+        color: v.$mutedTextColor;
+        font-size: 14px;
+        font-family: v.$secondaryFontFamily;
+        margin: 0;
+        padding: 0;
     }
 
     
@@ -195,6 +218,7 @@ card.scss
     &__title {
         font-size: 1.5rem;
         text-align: center;
+        
     }
 
     
