--- a/resources/css/components/_panel.scss
+++ b/resources/css/components/_panel.scss
@@ -58,6 +58,7 @@ panel.scss
         font-weight: 200;
         padding: 1rem;
         border: none;
+        width: 100%;
         border-radius: 5px;
         cursor: pointer;
         transition: all 0.3s ease-in-out;
@@ -70,7 +71,7 @@ panel.scss
         justify-content: center;
         align-items: center;
         position: absolute;
-        bottom: 150px;
+        bottom: 1rem;
         width: 100%;
        
         &__heading {
