--- a/resources/css/components/_progress.scss
+++ b/resources/css/components/_progress.scss
@@ -5,7 +5,7 @@
 @use '../base/variables' as v;
 
 .progress {
-    margin-top: 5rem;
+    margin-top: 2rem;
     clear: both;
 
     height: 20px;
@@ -16,5 +16,23 @@
     &__bar {
         height: 100%;
         background-color: v.$primaryBlockColor;
+        transition: width 0.3s ease;
+    }
+
+
+    &--large {
+        margin-top: 2rem;
+    }
+
+    &__number {
+        position: absolute;
+        
+        font-family: v.$secondaryFontFamily;
+        color: v.$primaryBlockColor;
+        text-align: center;
+        left: 50%;
+        transform: translateX(-50%);
+        box-sizing: border-box;
+        font-size: 1.2rem;
     }
 }
