--- a/resources/css/components/_navigation.scss
+++ b/resources/css/components/_navigation.scss
@@ -6,7 +6,7 @@
 
 .navigation {
     margin: 2%;
-    background-color: rgb(49, 49, 49);
+    background-color: v.$secondaryBlockColor;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
     border-radius: 5px;
     display: flex;
