--- a/resources/css/base/_variables.scss
+++ b/resources/css/base/_variables.scss
@@ -7,12 +7,25 @@
 // Fonts
 $secondaryFontFamily: "Roboto", sans-serif;
 $primaryFontFamily: "Anton", sans-serif;
-$secondaryTextColor: #e4e4e4;
-$primaryTextColor: #f5f5f5;
-$mutedTextColor: #e4e4e49f;
 
-$primaryBlockColor: #292929;
-$secondaryBlockColor: #414141ea;
 
-$buttonColor: #003366;
-$bordersColor: #f5f5f5;
+// Block Colors
+$primaryBlockColor: #4CAF50; 
+$secondaryBlockColor: #419946;
+$activatedBlockColor: #79af7a; 
+
+// Text Colors
+$primaryTextColor: #FFFFFF; 
+$secondaryTextColor: #f1f1f1; 
+$mutedTextColor: #d6d6d6; 
+
+// Button Colors
+$primaryButtonColor: #2f6830;
+$secondaryButtonColor: #419946;
+$buttonHoverColor: #39863b; 
+
+// Borders
+$bordersColor: #79af7a; 
+
+// Box Shadow
+$boxShadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
