--- a/resources/css/components/_buttons.scss
+++ b/resources/css/components/_buttons.scss
@@ -5,7 +5,7 @@
 @use '../base/variables' as v;
 
 .button {
-    background-color: v.$primaryBlockColor;
+    
     color: v.$primaryTextColor;
     border: none;
     text-align: center;
@@ -44,19 +44,27 @@
 
     &--small {
         background-color: v.$secondaryBlockColor;
+        box-shadow: v.$boxShadow;
+        border: 1px solid v.$bordersColor;
     color: v.$primaryTextColor;
-    border: none;
+    font-weight: 700;
     text-align: center;
     font-size: 14px;
-    padding: 0.7rem 1.5rem;
+    padding: 1rem 2rem;
+    
     border-radius: 5px;
     cursor: pointer;
     white-space: nowrap; /* Sprečava prelome teksta na dugmetu */
+    &:hover {
+        background-color: v.$secondaryBlockColor;
+        box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.322), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+        transition: 0.3s;
+    }
         
     }
 
     &--primary {
-        background-color: v.$secondaryBlockColor;
+        background-color: v.$primaryButtonColor;
         
         color: v.$primaryTextColor;
         border: none;
@@ -71,7 +79,7 @@
         border-radius: 10px;
         transition: all 0.3s ease-in-out;
         &:hover {
-            background-color: v.$secondaryBlockColor;
+            background-color: v.$buttonHoverColor;
 
             box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.322), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
             transition: 0.3s;
@@ -79,7 +87,7 @@
     }
 
     &--secondary {
-        background-color: v.$buttonColor;
+        background-color: v.$secondaryButtonColor;
         color: v.$primaryTextColor;
         font-family: v.$secondaryFontFamily;
         border: none;
@@ -88,20 +96,19 @@
         display: inline-block;
         padding: 1rem 2rem; 
         width: 5rem;
-        font-size: 18px;
+        font-size: 22px;
         margin-left: 2rem;
         cursor: pointer;
         border-radius: 4px;
         transition: all 0.3s ease-in-out;
         &:hover {
-            background-color: v.$buttonColor;
+            background-color: v.$buttonHoverColor;
             box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.322), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
             transition: 0.3s;
         }
     }
 
     &--form {
-        box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
         width: 100%;
         box-sizing: border-box;
        
