--- a/resources/css/components/_flex.scss
+++ b/resources/css/components/_flex.scss
@@ -12,200 +12,96 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    
 
     &--col--1 {
         flex-direction: column; 
         justify-content: flex-start;
-        align-items: center; 
+        align-items: center;
+    }
+
+    &--row {
+        width: 100%;
+        height: auto;
+        justify-content: space-between;
+        flex-direction: row;
+        flex-wrap: wrap;
         
     }
 
-    &--col--2 {
-        flex-direction: row; 
-        justify-content: center;
-        flex-wrap: wrap; 
-        margin-left: 20%;
-        margin-right: 20%;
-    }
+    
 
     &__box {
-        width: 30%;
-        background-color: v.$primaryBlockColor;
+        width: 80%;
+        background-color: v.$secondaryBlockColor;
         border-radius: 5px;
         padding: 2rem 4rem;
         margin: 1rem;
         height: auto;
         min-height: 10rem;
+        position: relative;
+        box-shadow: v.$boxShadow;
+        
+        
+        
 
         &--primary {
-            width: 80%;
+
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            color: v.$primaryTextColor;
+            font-family: v.$secondaryFontFamily;
+            position: initial;
+            min-height: 0;
+           
+            
             
         }
 
         &--secondary {
-            width: 80%;
-            padding: 2rem 4rem;
-            display: flex;
-            justify-content: space-between;
-            background-color: v.$primaryBlockColor;
-            border-radius: 5px;
-            vertical-align: middle;
-            font-family: v.$secondaryFontFamily;
-            font-size: 18px;
-            color: v.$primaryTextColor;
-            height: fit-content;
-            min-height: auto;
-        }
 
-        &--article {
-            position: relative;
-            width: 80%;
-            padding: 1rem 2rem;
             display: flex;
+            justify-content: center;
             flex-direction: column;
-            justify-content: flex-start;
-            align-items: flex-start;
-            background-color: v.$primaryBlockColor;
-            border-radius: 5px;
-      
-            font-family: v.$secondaryFontFamily;
-            font-size: 18px;
             color: v.$primaryTextColor;
-            height: fit-content;
-            min-height: auto;
+            font-family: v.$secondaryFontFamily;
+            position: initial;
+            min-height: 0;
         }
 
-        &--event {
-            width: 80%;
+        &--20 {
+            width: 200px;
+            min-width: 200px;
         }
-        
-        &--reward {
-            position: relative;
-            height: 10rem;
-            min-height: 10rem;
-            width: 10%;
-            padding: 1rem 2rem;
-            
+
+        &--tags {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 1rem;
+            margin: 1rem 0
+        }
+
+        &--completed {
+            background-color: v.$activatedBlockColor;
         }
 
         &__icon {
             position: absolute;
-            margin-left: 30%;
-            
-
-            box-sizing: border-box;
-            
+            right: 2rem;
+            top: 2rem;
+            width: 30px;
+            height: 30px;
         }
-
-        &--achievement {
-            background-color: #636363;
-        }
-
-        & p {
-            font-family: v.$secondaryFontFamily;
-            font-size: 18px;
-            color: v.$primaryTextColor;
-        }
-
-        &--coins {
-            margin-top: 0;
-        }
-    }
-
-   
-
-    &--column {
-        text-align: left;
-        align-items: flex-start;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        margin-top: -10%;
-        margin-bottom: 2%;
-    
-    }
-
-
-    &--row {
-        width: fit-content;
-        height: fit-content;
-        justify-content: space-between;
-        flex-direction: row;
-        flex-wrap: wrap;
-        margin-right: 20%;
-    }
-    &__hr {
-        width: 20px;
-    }
-
-    &--full {
-        height: 100vh;
-        width: 100vw;
-        // place content some place up
-        justify-content: flex-start;
-       
-    }
-    &--home {
-        height: 100vh;
-        width: 100vw;
-      
-    
-        // place left
-        align-items: flex-start;
-
         
-        background-color: v.$primaryBlockColor;
+    }
     
-    }
-    &--text {
-        position: relative;
-        text-decoration: none;
-        font-family: v.$secondaryFontFamily;
-        margin: 1rem;
-            font-size: 32px;
-            font-weight: 700;
 
-        &--login {
-            color: v.$primaryTextColor;
-            font-family: v.$primaryFontFamily;
-            font-size: 32px;
-            font-weight: 700;
-            &:hover {
-                color: v.$secondaryTextColor;
-                transition: 0.3s;
-              
-            }
-        }
-        &--register {
-            color: v.$secondaryTextColor;
-            font-family: v.$primaryFontFamily;
-            font-size: 32px;
-            font-weight: 700;
-            &:hover {
-                color: v.$primaryTextColor;
-                transition: 0.3s;
-                
-            }
-        }
-
-
-    }
 
 }
 
-@media screen and (min-width: 884px) {
-    .flex {
-       
-        &--col--2 {
-            justify-content: flex-start;
-            margin-left: 0;
-            margin-right: 0;
-        }
-    }
-}
 
-@media screen and (min-width: 431px) and (max-width: 883px) {
+
+@media screen and (min-width: 431px) and (max-width: 799px) {
     .flex {
        
 
@@ -213,6 +109,24 @@
             margin-left: 0;
             margin-right: 0;
         }
+
+        &__row {
+            margin-top: 1rem;
+            flex-direction: column;
+            justify-content: center;
+            width: 100%;
+            gap: 2rem;
+        }
+
+        &__box {
+            width: 60%;
+            &--20 {
+                width: 100%;
+                min-width: 100%;
+                box-sizing: border-box;
+                margin: 1rem 0;
+            }
+      }
     }
 }
 
@@ -223,6 +137,7 @@
         &--row {
             margin-top: 1rem;
             flex-direction: column;
+            justify-content: center;
             width: 100%;
             gap: 2rem;
         }
@@ -239,6 +154,14 @@
         &__box {
             padding: 1rem 2rem;
             width: 80%;
+
+            &--20 {
+                width: 100%;
+                min-width: 100%;
+                box-sizing: border-box;
+                margin: 1rem 0;
+            }
         }
     }
 }
+
