--- a/resources/css/components/_logo.scss
+++ b/resources/css/components/_logo.scss
@@ -13,8 +13,8 @@
         color: v.$primaryBlockColor; 
         text-align: center;
         width: 100%; 
-        text-shadow: 0 0 3px rgba(0, 0, 0, 0.5); 
-        -webkit-text-stroke: 6px #29292957;
+        text-shadow: 0 0 3px rgb(0, 0, 0); 
+        -webkit-text-stroke: 1px #29292957;
     }
 }
 
