--- a/resources/css/components/_progress.scss
+++ b/resources/css/components/_progress.scss
@@ -15,7 +15,7 @@
 
     &__bar {
         height: 100%;
-        background-color: v.$primaryBlockColor;
+        background-color: v.$secondaryBlockColor;
         transition: width 0.3s ease;
     }
 
