--- a/resources/css/components/_roadmap.scss
+++ b/resources/css/components/_roadmap.scss
@@ -84,6 +84,8 @@
     }
 
 
+// Media for screen
+
     @media screen and (min-width: 431px) and (max-width: 799px) {
       .year {
         width: 30vw;
