--- a/resources/css/components/_panel.scss
+++ b/resources/css/components/_panel.scss
@@ -46,6 +46,7 @@ panel.scss
     &__list {
         margin: 0;
         list-style-type: none;
+        padding-bottom: 2rem;
         
         
     }
@@ -121,5 +122,19 @@ panel.scss
         &:hover {
             background-color: rgba(0, 0, 0, 0.2);
         }
+    }
+}
+
+
+@media screen and (max-width: 900px) and (max-height: 900px) {
+    .panel {
+        overflow-y: scroll;
+        padding-bottom: 2rem;
+        &__logo__heading {
+            display: none;
+        }
+        
+        
+        
     }
 }
